FIX: Fixing dark mode

--- a/front/src/assets/styles/ownstyles.css
+++ b/front/src/assets/styles/ownstyles.css
@@ -1,3 +1,5 @@
+/* Hamburguesa y modal */
+
 .jv-hamburger-menu__button {
     cursor: pointer;
     display: flex;
@@ -49,15 +51,6 @@
     transform: rotate(-45deg);
     top: 0;
   }
-  .dark-mode {
-    background-color: #121212;
-    color: #ffffff;
-  }
-  
-  .light-mode {
-    background-color: #ffffff;
-    color: #000000;
-  }  
 
   .modal-overlay {
     display: flex;
@@ -82,8 +75,17 @@
     background-color: white !important;
   }
 
-  body.dark-mode,
-    .dark-mode {
-    background-color: #333; 
-    color: #f1f1f1;
-    }
+
+  
+  /* Modo oscuro */
+  body.darkmode {
+    background-color: #2e2e2e; 
+    color: #ffffff; 
+  }
+  
+  .darkmode .jv-hamburger-menu__button {
+    border-color: #ffffff;
+  }
+  .darkmode .jv-header__main-nav-link {
+    color: #ffffff; 
+  }
